# income-prediction

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  config.json  hello.py  main.py  model_card.md  post.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pytest.yml
outputs/: slice_output.txt
src/: clean_data.py  download_data.py  train_model.py
tests/: conftest.py  test_all.py  test_app.py  test_ml.py
