[project]
name = "income-predicition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "dvc>=3.59.0",
    "fastapi==0.115.8",
    "flake8==7.1.1",
    "ipykernel==6.29.5",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "requests==2.32.3",
    "ruff==0.9.5",
    "scikit-learn==1.6.1",
    "uvicorn==0.34.0",
]
